--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "airtable": "^0.8.1",
     "dotenv": "^8.2.0",
-    "flatpickr": "*",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flatpickr": "^3.10.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
